Test/typing/should_fail/attr_more_than_one_access_modifier.java
package toto;

public class A {
    private public int i;
}